Más código en el notebook de Modulos_para_grib

--- a/Modulos_para_grib.ipynb
+++ b/Modulos_para_grib.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0048f091",
+   "id": "4ce5cc7b",
    "metadata": {},
    "source": [
     "# Módulos útiles para ficheros grib"
@@ -10,17 +10,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05529d9b",
+   "id": "7bffda61",
    "metadata": {},
    "source": [
-    "Para abrir el notebook en Colab pulsa el botón: <a target=\"_blank\" href=\"https://colab.research.google.com/github/jlcasador/curso_formatos_meteo/blob/main/Modulos_para_grib.ipynb\">\n",
-    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
-    "</a>"
+    "Para abrir el notebook en Colab pulsa el botón:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d570351d",
+   "id": "dbe1581e",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/jlcasador/curso_formatos_meteo/blob/main/Modulos_para_grib.ipynb\" target=\"_blank\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17aeddbc",
    "metadata": {},
    "source": [
     "[GRIB](https://confluence.ecmwf.int/display/CKB/What+are+GRIB+files+and+how+can+I+read+them) es un acrónimo cuyas siglas corresponden a \"General Regularly distributed Information in Binary form\".  \n",
@@ -29,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fbee0fb",
+   "id": "a374cd86",
    "metadata": {},
    "source": [
     "Esta foto puede representar la jerarquía de paquetes que vamos a usar en este curso:"
@@ -37,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1d355d8",
+   "id": "fda1ff14",
    "metadata": {},
    "source": [
     "![jerarquía de módulos](matroshka_grib_60.jpg)"
@@ -45,24 +51,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8db8cbd",
+   "id": "4a3f9b8a",
    "metadata": {},
    "source": [
-    "## Instalación"
+    "### Instalación"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "bfe0000a",
+   "id": "d5c22c97",
    "metadata": {},
    "source": [
-    "### Instalación de eccodes utilizando CMake"
+    "#### Instalación de eccodes utilizando CMake"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3991b246",
+   "id": "51ac1a3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,20 +84,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c47ad683",
+   "execution_count": 4,
+   "id": "e098a392",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "PATH = os.getenv('PATH')\n",
-    "os.environ['PATH'] = PATH + ':/content/build/eccodes/bin'"
+    "os.environ['PATH'] = ':'.join([PATH, '/content/build/eccodes/bin'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae75aa00",
+   "id": "8b0f37b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,10 +108,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cd3a4e72",
+   "execution_count": 7,
+   "id": "a6952cc3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\r\n",
+      "ecCodes Version 2.28.0\r\n",
+      "\r\n",
+      "Definition files path from environment variable ECCODES_DEFINITION_PATH=/usr/local/apps/gcc/11.2.0/eccodes/2.28.0/share/eccodes/definitions:/usr/local/apps/global/harmonie_definitions/1.1/grib/definitions\r\n",
+      "Full definition files path=/usr/local/apps/gcc/11.2.0/eccodes/2.28.0/share/eccodes/definitions:/usr/local/apps/global/harmonie_definitions/1.1/grib/definitions\r\n",
+      "\r\n",
+      "Default SAMPLES path is used: /usr/local/apps/gcc/11.2.0/eccodes/2.28.0/share/eccodes/samples\r\n",
+      "SAMPLES path can be changed by setting the ECCODES_SAMPLES_PATH environment variable.\r\n",
+      "\r\n"
+     ]
+    }
+   ],
    "source": [
     "!codes_info"
    ]
@@ -113,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "971dfde3",
+   "id": "2572caad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,25 +143,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "41b6ebc0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "dffabb3f",
+   "id": "a66fc9f8",
    "metadata": {},
    "source": [
-    "### Instalación de eccodes con Conda"
+    "#### Instalación de eccodes con Conda"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14c08bf2",
+   "id": "efd8eb87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb72b454",
+   "id": "f027bf23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ff921c1",
+   "id": "b9b8f055",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "839ef618",
+   "id": "535518d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2579e2b1",
+   "id": "fadf10a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,78 +208,159 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60d4af48",
+   "id": "ba665989",
    "metadata": {},
    "source": [
-    "### Instalación de climetlab"
+    "#### Instalación de otros paquetes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2320ffdc",
+   "id": "874f1dc3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install climetlab"
+    "#!pip install xarray # xarray está instalado por defecto\n",
+    "!pip install cartopy\n",
+    "# metview\n",
+    "#!pip install climetlab"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "33119d02",
+   "id": "5c6d3f58",
    "metadata": {},
    "source": [
-    "## Grib_tools"
+    "### Grib_tools"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad30b0fe",
+   "metadata": {},
+   "source": [
+    "Las [grib tools](https://confluence.ecmwf.int/display/ECC/GRIB+tools) son un conjunto de comandos que permiten "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07f2079e",
+   "id": "291e5c61",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4b20a23e",
-   "metadata": {},
    "source": [
-    "## Módulo eccodes"
+    "!grib_ls ecmwf_surface.grib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "2939a8b1",
+   "execution_count": null,
+   "id": "634f7dc9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "total 752\r\n",
-      "-rw-r--r-- 1 pn31 pn   8926 Jul  1 10:10 Descargas_MARS.ipynb\r\n",
-      "-rw-r--r-- 1 pn31 pn 331200 Jun 11 19:41 ecmwf_surface.grib\r\n",
-      "-rw-r--r-- 1 pn31 pn   7207 Jun 27 15:58 extr_mars_0627.ipynb\r\n",
-      "-rw-r--r-- 1 pn31 pn  36948 Jul  1 10:15 flujo_basico_C.jpg\r\n",
-      "-rw-r--r-- 1 pn31 pn  39713 Jul  1 10:10 flujo_basico_C.png\r\n",
-      "-rw-r--r-- 1 pn31 pn  42117 Jul  1 10:15 flujo_basico_python.jpg\r\n",
-      "-rw-r--r-- 1 pn31 pn  43265 Jul  1 10:10 flujo_basico_python.png\r\n",
-      "-rw-r--r-- 1 pn31 pn   6504 Jun 27 06:28 Introduccion_fuentes.ipynb\r\n",
-      "-rw-r--r-- 1 pn31 pn  83491 Jun 10 17:16 matroshka_grib_60.jpg\r\n",
-      "-rw-r--r-- 1 pn31 pn 118943 Jul  1 10:15 Modulos_para_grib.ipynb\r\n",
-      "-rw-r--r-- 1 pn31 pn     23 Jun 11 20:06 README.md\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!ls -l"
+    "# Cuidado con mayúsculas y espacios!\n",
+    "!grib_ls -p paramId,shortName,dataDate,dataTime,step ecmwf_surface.grib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60f2ca70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!grib_dump ecmwf_surface.grib | head -n 120"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d7b51121",
+   "id": "850652ef",
+   "metadata": {},
+   "source": [
+    "### Módulo eccodes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a83a7bcb",
+   "metadata": {},
+   "source": [
+    "https://sites.ecmwf.int/docs/eccodes/namespaceec_codes.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d72e7f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from eccodes import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b699a700",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"ecmwf_surface.grib\", \"rb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00c55f08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gid = codes_new_from_file(f, CODES_PRODUCT_GRIB)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e65b5d3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "codes_get(gid, \"paramId\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62e495bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "codes_release(gid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52775f3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fe11f99",
+   "metadata": {},
+   "source": [
+    "Efecto de la interfaz de python:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88850f5e",
    "metadata": {},
    "source": [
     "![flujo basico C](flujo_basico_C.png)"
@@ -273,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e7b5cea",
+   "id": "e0301d1c",
    "metadata": {},
    "source": [
     "![flujo_basico_python](flujo_basico_python.png)"
@@ -281,7 +376,53 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89b58f52",
+   "id": "b735c3ff",
+   "metadata": {},
+   "source": [
+    "Algo un poco más complicado:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d8944f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def nearest_value(filename, input_paramid, latitude, longitude):\n",
+    "    \n",
+    "    f = open(filename, \"rb\")\n",
+    "    values = {}\n",
+    "    \n",
+    "    while True:\n",
+    "        gid = codes_new_from_file(f, CODES_PRODUCT_GRIB)\n",
+    "        if gid is None: break\n",
+    "        \n",
+    "        paramid = codes_get(gid, \"paramId\")\n",
+    "        step = codes_get(gid, \"step\")\n",
+    "        if paramid==input_paramid:\n",
+    "            values[step] = codes_grib_find_nearest(gid, latitude, longitude)[0].value\n",
+    "        \n",
+    "        codes_release(gid)\n",
+    "\n",
+    "    f.close()\n",
+    "    \n",
+    "    return values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3b8a410",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nearest_value(\"ecmwf_surface.grib\", 167, 40, -5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c07f034e",
    "metadata": {},
    "source": [
     "https://www.ecmwf.int/en/newsletter/169/computing/advanced-regridding-metview"
@@ -289,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a20c3fb5",
+   "id": "f4e21fd9",
    "metadata": {},
    "source": [
     "https://metview.readthedocs.io/en/latest/"
@@ -297,32 +438,90 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12a8e09d",
+   "id": "410c06e2",
    "metadata": {},
    "source": [
-    "## Módulo xarray"
+    "### Módulo xarray"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "606e1871",
+   "id": "c8a31adf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import timedelta\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import xarray as xr\n",
+    "import cartopy.crs as ccrs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08d6ab79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = xr.load_dataset(\"ecmwf_surface.grib\", engine=\"cfgrib\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3cd2a594",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_h12 = ds.sel(step = timedelta(hours=12)).t2m - 273.15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "783f2d8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_h12.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1d544c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(8,4.5))\n",
+    "ax = plt.axes(projection=ccrs.Mercator())\n",
+    "ax.coastlines()\n",
+    "t_h12.plot.contourf(ax=ax, transform=ccrs.PlateCarree(), levels= np.arange(-20,25,1))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1af815d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "227165ce",
+   "id": "e9895357",
    "metadata": {},
    "source": [
-    "## Módulo climetlab"
+    "### Módulo climetlab"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50566e20",
+   "id": "c5f75819",
    "metadata": {},
    "outputs": [],
    "source": []
